GPC/tests/examples/fail/wrongPointers5.gpc

void GPRM::Test::wrongPointers5(double *d) {
    
    double* e = d == 0.53;

}
